added night sky

--- a/index.html
+++ b/index.html
@@ -8,27 +8,26 @@
     <title>Bamboo Weather</title>
   </head>
   <body>
-    <canvas>
+    <canvas class="canvas"></canvas>
 
-      <header class="header">
-        <h1 class="title">
-          BambooWX
-        </h1>
-      </header>
+    <header class="header">
+      <h1 class="title">
+        BambooWX
+      </h1>
+    </header>
 
-      <form class="form">
-        <label>City:</label>
-        <input type="text" class="in1"/>
-        <label>State:</label>
-        <input type="text" class="in2"/>
-        <button type="submit">Submit</button> 
-      </form>
+    <form class="form">
+      <label>City:</label>
+      <input type="text" class="in1"/>
+      <label>State:</label>
+      <input type="text" class="in2"/>
+      <button type="submit">Submit</button> 
+    </form>
 
-      <main class="wxContainer">
+    <main class="wxContainer">
 
-      </main>
+    </main>
 
-    </canvas>
     <script src="index.js"></script>
   </body>
 </html>
