--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
       </header>
   
       <form class="form">
-        <label>City:</label>
-        <input type="text" class="in1"/>
+        <!-- <label>City:</label> -->
+        <input type="text" class="in1" placeholder="City"/>
         <!-- <br/> -->
-        <label>State:</label>
-        <input type="text" class="in2"/>
+        <!-- <label>State:</label> -->
+        <input type="text" class="in2" placeholder="State"/>
         <br/>
         <button type="submit">Submit</button> 
       </form>
