--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, target-densitydpi=device-dpi">
     <link href="styles.css" rel="stylesheet">
     <title>Bamboo Weather</title>
   </head>
   <body class="body">
+    
+  <!-- </div> -->
+  <div class="wrapper">
     <canvas class="canvas"></canvas>
-
+  
     <div class="menuContainer">
       <header class="header">
         <h1 class="title">
@@ -26,12 +29,12 @@
         <br/>
         <button type="submit">Submit</button> 
       </form>
-
+    
+      <main class="wxContainer">
+  
+      </main>
     </div>
 
-    <main class="wxContainer">
-
-    </main>
 
     <script src="index.js"></script>
   </body>
