--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
   
       <form class="form">
         <!-- <label>City:</label> -->
-        <input type="text" class="in1" placeholder="City"/>
+        <input type="search" class="in1" placeholder="City"/>
         <!-- <br/> -->
         <!-- <label>State:</label> -->
-        <input type="text" class="in2" placeholder="State"/>
+        <input type="search" class="in2" placeholder="State"/>
         <br/>
-        <button type="submit">Submit</button> 
+        <button type="submit" style="display: none">Submit</button> 
       </form>
     
       <main class="wxContainer">
