fixed problem where the animations were not fully switching

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <!-- </div> -->
   <div class="wrapper">
     <canvas class="canvas"></canvas>
+    <canvas class="canvas2"></canvas>
   
     <div class="menuContainer">
       <header class="header">
